edit index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- this document is intended for hands on experience to learn html-css // fatih asci -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,51 +21,52 @@
             <a href="#action">Email</a>
         </nav>
     </header>
-    <section id="hero">
-        <div class="one">
-            <h1>Make Appointment!</h1>
-            <p>Make an appointment for a span of 30min with me regarding your business inquiry.</p>
-            <div class="button"><a href="#hero" id="sign-up-button">Sign up</a></div>
-        </div>
-        <div class="two">
-            <img src="./images/logo.png" alt="logo for mr fatih asci">
-        </div>
-    </section>
+    <main>
+        <section id="hero">
+            <div class="one">
+                <h1>Make Appointment!</h1>
+                <p>Make an appointment for a span of 30min with me regarding your business inquiry.</p>
+                <div class="button-one"><a href="#hero" id="sign-up-button">Sign up</a></div>
+            </div>
+            <div class="two">
+                <img src="./images/logo.png" alt="logo for mr fatih asci">
+            </div>
+        </section>
 
-    <section id="socials">
-        <div id="linkedin">
-            <p>Lorem.</p>
-        </div>
+        <section id="socials">
+            <div id="linkedin">
+                <p><a href="https://www.linkedin.com/in/mrfatihasci/">Linkedin</a></p>
+            </div>
 
-        <div id="github">
-            <p>Lorem ipsum dolor.</p>
-        </div>
-        <div id="instagram">
-            <p>Lorem, ipsum.</p>
-        </div>
-        <div id="youtube">
-            <p>Lorem.</p>
-        </div>
-    </section>
+            <div id="github">
+                <p><a href="https://github.com/mrfatihasci">GitHub</a></p>
+            </div>
+            <div id="instagram">
+                <p><a href="https://www.instagram.com/conqeyme35/">Instagram</a></p>
+            </div>
+            <div id="youtube">
+                <p><a href="https://www.youtube.com/@mrfatihasci">Youtube</a></p>
+            </div>
+        </section>
 
-    <section id="quote">
-        <p>If you dont know where you are going, then any road will get you there.</p>
-        <p>Lewis Carroll</p>
-    </section>
+        <section id="quote">
+            <p>If you dont know where you are going, then any road will get you there.</p>
+            <p>Lewis Carroll</p>
+        </section>
 
-    <section id="action">
-        <div>
-            <h2>Reach me now!</h2>
-            <p>Send me an email regarding any of your inquiries</p>
-        </div>
-        <div class="button">
-            <a href="#action" id="email-button">Email</a>
-        </div>
-    </section>
-
-
-    <footer>
-        <p>Mr. Fatih Asci</p>
-    </footer>
+        <section id="action">
+            <div class="one">
+                <h2>Reach me now!</h2>
+                <p>Send me an email regarding any of your inquiries</p>
+            </div>
+            <div class="button-two">
+                <a href="#action" id="email-button">Email</a>
+            </div>
+        </section>
+        <footer>
+            <p>Make an Appointment !</p>
+            <p>Mr. Fatih Asci</p>
+        </footer>
+    </main>
 </body>
 </html>
